# Qriro

./: .gitignore  .travis.yml  AndroidManifest.xml  Makefile.am  README.md  analyzer.m  configure.ac  dataProcessor.c  dataProcessor.h  fifo.c  fifo.h  makefile  simple_tcp_server.c  simple_tcp_server.h  test2.pde
Android/: AndroidManifest.xml
Android/res/layout/: activity_draw.xml  activity_main.xml
Android/res/menu/: main.xml
Android/src/ar/com/fclad/datasender/: MainActivity.java  TCPclientService.java
Demo-application/src/ar/com/fclad/processingEclipse/: CatchObject.java  CatchToroid.java  MainClass.java
Server/: .gitignore  analyzer.m  dataProcessor.c  examples.c  fifo.c  makefile
Server/Tests/: Qriro_server_test.py
Server/src/: CMakeLists.txt  Qriro-server.c  Qriro-server.h  makefile
Server/src/Bluetoothlib/: BluetoothClient.c  BluetoothClient.h  CMakeLists.txt
Server/src/FIFOlib/: CMakeLists.txt
Server/src/GnuPlotUtils/: CMakeLists.txt  GnuPlotUtils.c  GnuPlotUtils.h
Server/src/TCPlib/: CMakeLists.txt  TCPServer.c  TCPServer.h
res/layout/: activity_configure_tcp.xml  activity_draw.xml  activity_main.xml  sample_draw_view.xml
res/menu/: draw.xml
res/values/: strings.xml
src/ar/com/fclad/datasender/: BluetoothServerService.java  ConfigureTCPActivity.java  DrawActivity.java  DrawView.java  MainActivity.java  TCPclientService.java
src/ar/com/fclad/processingEclipse/: CatchSphere.java  CatchToroid.java  CommunicationThread.java  Cube.java  Diamond.java  MainClass.java  Pyramid.java  ScoreCounter.java
